# ExecutablesLauncher

./: .gitignore  CMakeLists.txt  LaunchExecutablesInDir.cpp  LaunchExecutablesInDir.hpp  README.org  main.cpp
test/: CMakeLists.txt  create_test_folder.sh  run_test.cpp
test/test_executables_src/: Hello_my_PID.cpp  raise_SIGINT.cpp  raise_SIGKILL.cpp  return_-1.cpp  return_42.cpp  sleep_2_seconds.cpp  write_stderr.cpp
